--- a/Semana 3/pages/game.html
+++ b/Semana 3/pages/game.html
@@ -11,10 +11,10 @@ Dev: Luiz Filipe - 2111287
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../css/reset.css">
-  <link rel="stylesheet" href="../css/game.css">
-  <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
-  <script defer src="../js/game.js"></script>
+  <link rel="stylesheet" href="../css/reset.css">  <!--define o arquivo CSS a ser usado para redefinir estilos padrão do navegador.-->
+  <link rel="stylesheet" href="../css/game.css"><!--define o arquivo CSS a ser usado para estilizar o jogo de memória.-->
+  <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon"><!--define o ícone da aba do navegador.-->
+  <script defer src="../js/game.js"></script><!--define o arquivo JavaScript a ser usado para implementar a lógica do jogo. A palavra-chave defer significa que o script será executado após o carregamento do documento HTML.-->
 
   <title>Memory Game</title>
 </head>
@@ -23,11 +23,11 @@ Dev: Luiz Filipe - 2111287
 
   <main>
     <header>
-      <span class="player"></span>
-      <span>Tempo: <span id="timer">60</span></span>
+      <span class="player"></span> <!--define um espaço para exibir o nome do jogador.-->
+      <span>Tempo: <span id="timer">60</span></span> <!--define um espaço para exibir o tempo restante para jogar.-->
     </header>
 
-    <div class="grid"></div>
+    <div class="grid"></div> <!--define a área onde as cartas do jogo serão exibidas.-->
   </main>
 
 </body>
