--- a/Semana 3/index.html
+++ b/Semana 3/index.html
@@ -12,10 +12,10 @@ Dev: Luiz Filipe - 2111287
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/reset.css"><!--define o arquivo CSS a ser usado para redefinir estilos padrão do navegador.-->
   <link rel="stylesheet" href="./css/login.css">
-  <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
-  <script defer src="./js/login.js"></script>
+  <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon"><!--define o ícone da aba do navegador.-->
+  <script defer src="./js/login.js"></script><!--define o arquivo JavaScript a ser usado para implementar a lógica do jogo. A palavra-chave defer significa que o script será executado após o carregamento do documento HTML.-->
   <link rel="shortcut icon" href="./images/brain.png" type="image/x-icon">
   <title>Memory Game | Login</title>
 </head>
@@ -24,7 +24,7 @@ Dev: Luiz Filipe - 2111287
 
   <form class="login-form">
 
-    <div class="login__header">
+    <div class="login__header"> <!--criar um cabeçalho para o formulário de login, contendo uma imagem (representando o logo do jogo) e um título.-->
       <img src="./images/logo.png" alt="logo">
       <h1>Memory Game</h1>
     </div>
