--- a/Semana 3/index.html
+++ b/Semana 3/index.html
@@ -13,7 +13,7 @@ Dev: Luiz Filipe - 2111287
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="./css/reset.css"><!--define o arquivo CSS a ser usado para redefinir estilos padrão do navegador.-->
-  <link rel="stylesheet" href="./css/login.css">
+  <link rel="stylesheet" href="./css/login.css"><!--define o arquivo CSS a ser usado para pagina de login.-->
   <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon"><!--define o ícone da aba do navegador.-->
   <script defer src="./js/login.js"></script><!--define o arquivo JavaScript a ser usado para implementar a lógica do jogo. A palavra-chave defer significa que o script será executado após o carregamento do documento HTML.-->
   <link rel="shortcut icon" href="./images/brain.png" type="image/x-icon">
