--- a/Semana 3/index.html
+++ b/Semana 3/index.html
@@ -6,7 +6,7 @@ Dev: Luiz Filipe - 2111287
 -->
 
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-BR"> <!--Linguagem português-->
 
 <head>
   <meta charset="UTF-8">
