--- a/Semana 1/Arquivo 3/index.html
+++ b/Semana 1/Arquivo 3/index.html
@@ -6,26 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arquivo 3</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="stylee.css">
+    <link rel="stylesheet" href="style.css">
 </head>
-<body background="13087.jpg">
-    <!-- Aqui está o cabeçalho-->
-    <div class="name">
-        <h1>Dev: Luiz Filipe - 2111287</h1>
-    </div>
-        <div class="cabeçalho">
-            <h1>Curso de Engenharia de Software - UniEVANGÉLICA</h1>
-            <h1>Disciplina de Programação Web</h1>
-            <h1>DATA: 03/03/2023 </h1>
-            <div class="voltini">
-                <p><a href="index.html">Para voltar ao menu inicial. Clique aqui</a></p>
-            </div>
-        </div>
-    <!-- Aqui criei um link dentro da imagem do github para ir para o meu projeto-->
-    <div class="link">
-        <a target="_blank" href="https://github.com/Lufine"> <img src="icons8-github-50.png" alt=""></a>
-        </div>
-
+<body>
+    <div> <img class="imagem" src="13087.jpg" alt=""> </div>
     <div class="geral">
         <div class="tabelaA">
             <table>
