--- a/Semana 1/Arquivo 5/index.html
+++ b/Semana 1/Arquivo 5/index.html
@@ -29,26 +29,44 @@
         <p>Para ver o formulario. <a href="arquivo2.html">Clique aqui</a><br></p>
         <p>Para ver as tabelas <a href="arquivo3.html">Clique aqui</a><br></p>
         <p>Para ver as arenas. <a href="arquivo4.html">Clique aqui</a></p>
-        <table border 1px>
-            <thead>   
+        
+        <div class="tabelainicio">
+            <table border="1px">
+                <div class="colunainicio">
+                    <thead>
+                      <tr>
+                        <th colspan="3">E-Sports</th>
+                      </tr>
+                    </thead>
                 <tr>
-                    <th>TESTE</th>
-                    <th>231</th>
-                    <th>321</th>
-                    <th>231</th>
-                </tr>
-            </thead>
-            <tr>
-                <td>asdas</td>
-                <td>asdw</td>
-                <td>32</td>
-                <td>as5das</td>
-            </tr>
-            <tr>
-                <td style="text-align: center;" colspan="4">alunos 236</td>
-            </tr>
-            
-        </table>
+                    <th>Nome</th>
+                        <th>Idade</th>
+                        <th>Profissão</th>
+                  </tr>
+                  <tr>
+                    <td>Maria</td>
+                    <td>32</td>
+                    <td>Advogada</td>
+                  </tr>
+                  <tr>
+                    <td>Carlos</td>
+                    <td>25</td>
+                    <td>Pro Player</td>
+                  </tr>
+                  <tr>
+                    <td>Lucas</td>
+                    <td>28</td>
+                    <td>Psicologo</td>
+                  </tr>
+                </tbody>
+                <tfoot>
+                  <tr>
+                    <td colspan="3">Total de pessoas: 3</td>
+                  </tr>
+                </tfoot>
+            </div>
+              </table>
+        </div>
 
         <label for="nome">Nome:</label>
                     <input type="text" id="nome" name="nome"><br><br>
