--- a/Semana 1/Arquivo 2/index.html
+++ b/Semana 1/Arquivo 2/index.html
@@ -1,41 +1,41 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arquivo 2</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8"> <!-- definindo o charset -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- especificando a compatibilidade com o Internet Explorer -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- definindo o viewport -->
+    <title>Arquivo 2</title> <!-- definindo o título da página -->
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> <!-- definindo o ícone da página -->
+    <link rel="stylesheet" href="style.css"> <!-- importando a folha de estilo externa -->
 </head>
-<body background="background.png">
+<body background="background.png"> <!-- definindo o background da página -->
     <div class="formulario">
-        <form><br>
-            <form action="processa_dados.php" method="post">
+        <form><br> <!-- formulário sem ação definida -->
+            <form action="processa_dados.php" method="post"> <!-- formulário com ação definida para o arquivo processa_dados.php e método POST -->
                 <strong>
-                    <label for="nome">Nome:</label>
+                    <label for="nome">Nome:</label> <!-- definindo o label e o input de nome -->
                     <input type="text" id="nome" name="nome"><br><br>
-                    <label for="email">E-mail:</label>
+                    <label for="email">E-mail:</label> <!-- definindo o label e o input de email -->
                     <input type="email" id="email" name="email"><br><br>
-                    <label for="senha">Senha:</label>
+                    <label for="senha">Senha:</label> <!-- definindo o label e o input de senha -->
                     <input type="password" id="senha" name="senha"><br><br>
-                    <label for="idade">Idade:</label>
+                    <label for="idade">Idade:</label> <!-- definindo o label e o input de idade -->
                     <input type="number" id="idade" name="idade"><br><br>
-                    <label for="sexo">Sexo:</label>
+                    <label for="sexo">Sexo:</label> <!-- definindo o label e o input de sexo -->
                     <input type="radio" id="sexo_feminino" name="sexo" value="feminino">
                     <label for="sexo_feminino">Feminino</label>
                     <input type="radio" id="sexo_masculino" name="sexo" value="masculino">
                     <label for="sexo_masculino">Masculino</label><br><br>
-                    <label for="interesses">Interesses:</label>
+                    <label for="interesses">Interesses:</label> <!-- definindo o label e os inputs de interesses -->
                     <input type="checkbox" id="interesse_esportes" name="interesses[]" value="esportes">
                     <label for="interesse_esportes">Esportes</label>
                     <input type="checkbox" id="interesse_cinema" name="interesses[]" value="cinema">
                     <label for="interesse_cinema">Cinema</label>
                     <input type="checkbox" id="interesse_musica" name="interesses[]" value="musica">
                     <label for="interesse_musica">Música</label><br><br>
-                    <label for="foto">Foto:</label>
+                    <label for="foto">Foto:</label> <!-- definindo o label e o input de foto -->
                     <input type="file" id="foto" name="foto"><br><br>
-                    <input type="submit" value="Enviar">
+                    <input type="submit" value="Enviar"> <!-- definindo o botão de enviar -->
                 </strong>
             </form>
     </div>
