--- a/Semana 1/Arquivo 3/index.html
+++ b/Semana 1/Arquivo 3/index.html
@@ -1,41 +1,42 @@
-<!DOCTYPE html>
-<html lang="pt_BR">
-<head>
+<!DOCTYPE html> 
+<html lang="pt_BR"> 
+<head> 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arquivo 3</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <title>Arquivo 3</title> <!-- Título da página que aparece na aba do navegador -->
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> <!-- Ícone que aparece na aba do navegador -->
+    <link rel="stylesheet" href="style.css"> 
 </head>
-<body>
+<body> <!-- Abertura da tag BODY que contém o conteúdo do documento -->
     <div> <img class="imagem" src="13087.jpg" alt=""> </div>
     <div class="geral">
         <div class="tabelaA">
-            <table>
-                <div class="colunaA">
-                    <thead>
+            <table> <!-- Tabela -->
+                <div class="colunaA"> 
+                    <thead> <!-- Cabeçalho da tabela -->
                       <tr>
-                        <th colspan="3">E-Sports</th>
+                        <th colspan="3">E-Sports</th> <!-- Célula de cabeçalho da tabela com a palavra "E-Sports" e ocupando 3 células da linha -->
                       </tr>
                     </thead>
-                <tr>
-                    <th>Nome</th>
-                        <th>Idade</th>
-                        <th>Profissão</th>
+                <tbody> <!-- Corpo da tabela -->
+                  <tr> 
+                    <th>Nome</th> <!-- Célula de cabeçalho da tabela com a palavra "Nome" -->
+                        <th>Idade</th> <!-- Célula de cabeçalho da tabela com a palavra "Idade" -->
+                        <th>Profissão</th> <!-- Célula de cabeçalho da tabela com a palavra "Profissão" -->
                   </tr>
-                  <tr>
+                  <tr> 
                     <td>Maria</td>
-                    <td>32</td>
-                    <td>Advogada</td>
+                    <td>32</td> 
+                    <td>Advogada</td> 
                   </tr>
                   <tr>
-                    <td>Carlos</td>
-                    <td>25</td>
+                    <td>Carlos</td> 
+                    <td>25</td> 
                     <td>Pro Player</td>
                   </tr>
-                  <tr>
-                    <td>Lucas</td>
+                  <tr> 
+                    <td>Lucas</td> 
                     <td>28</td>
                     <td>Psicologo</td>
                   </tr>
