--- a/Semana 1/Arquivo 2/index.html
+++ b/Semana 1/Arquivo 2/index.html
@@ -10,8 +10,8 @@
 </head>
 <body background="background.png"> <!-- definindo o background da página -->
     <div class="formulario">
-        <form><br> <!-- formulário sem ação definida -->
-            <form action="processa_dados.php" method="post"> <!-- formulário com ação definida para o arquivo processa_dados.php e método POST -->
+        <form><br> 
+            <form action="processa_dados.php" method="post">
                 <strong>
                     <label for="nome">Nome:</label> <!-- definindo o label e o input de nome -->
                     <input type="text" id="nome" name="nome"><br><br>
