--- a/Semana 1/Arquivo 5/arquivo2.html
+++ b/Semana 1/Arquivo 5/arquivo2.html
@@ -1,3 +1,10 @@
+<!-- 
+Curso de Engenharia de Software - UniEVANGÉLICA
+Disciplina de Programação Web
+DATA: 03/03/2023
+Dev: Luiz Filipe - 2111287
+-->
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -11,9 +18,9 @@
 <body background="background.png">
     <div class="formulario">
         <div class="voltini">
-            <p><a href="index.html">Para voltar ao menu inicial. Clique aqui</a></p>
+            <p><a href="index.html">Para voltar ao menu inicial. Clique aqui</a></p> <!--Botão para voltar pra tela inicial-->
         </div>
-        <form>
+        <form> <!--Criando o formulário-->
                 <strong>
                     <label for="nome">Nome:</label>
                     <input type="text" id="nome" name="nome"><br><br>
