--- a/Semana 1/Arquivo 5/arquivo3.html
+++ b/Semana 1/Arquivo 5/arquivo3.html
@@ -18,7 +18,7 @@
             <h1>Disciplina de Programação Web</h1>
             <h1>DATA: 03/03/2023 </h1>
             <div class="voltini">
-                <p><a href="index.html">Para voltar ao menu inicial. Clique aqui</a></p>
+                <p><a href="index.html">Para voltar ao menu inicial. Clique aqui</a></p> <!--Botão para voltar pra tela inicial-->
             </div>
         </div>
     <!-- Aqui criei um link dentro da imagem do github para ir para o meu projeto-->
