--- a/Semana 1/Arquivo 5/index.html
+++ b/Semana 1/Arquivo 5/index.html
@@ -30,7 +30,7 @@
         <p>Para ver as tabelas <a href="arquivo3.html">Clique aqui</a><br></p>
         <p>Para ver as arenas. <a href="arquivo4.html">Clique aqui</a></p>
         
-        <div class="tabelainicio">
+        <div class="tabelainicio"> <!--Tabela na tela de inicio-->
             <table border="1px">
                 <div class="colunainicio">
                     <thead>
@@ -68,7 +68,7 @@
               </table>
         </div>
 
-        <label for="nome">Nome:</label>
+        <label for="nome">Nome:</label> <!--Criação do formulario na tela inicial-->
                     <input type="text" id="nome" name="nome"><br><br>
                     <label for="email">E-mail:</label>
 
