--- a/Semana 4/Atividade Prática/Arquivo 3 Refatorado.html
+++ b/Semana 4/Atividade Prática/Arquivo 3 Refatorado.html
@@ -1,3 +1,10 @@
+<!-- 
+Curso de Engenharia de Software - UniEVANGÉLICA
+Disciplina de Programação Web
+DATA: 03/03/2023
+Dev: Luiz Filipe - 2111287
+-->
+
 <!DOCTYPE html> 
 <html lang="pt_BR"> 
 <head> 
