Alterações Telas E-Sports

--- a/Semana 5/Atividade Pratica/arquivo4.html
+++ b/Semana 5/Atividade Pratica/arquivo4.html
@@ -41,7 +41,7 @@ Dev: Luiz Filipe - 2111287
 </script>
 
 <!-- Adicionando o menu navegável -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 <a class="navbar-brand" href="#">E-Sport</a>
 <button class="navbar-toggler" type="button"
 data-toggle="collapse" data-target="#navbarNav"
@@ -71,11 +71,11 @@ aria-label="Toggle navigation">
 <div class="container">
 
 <div class="container">
-    <div class="jumbotron">
-        <h1 class="display-4">Menu</h1>
+    <!-- <div class="jumbotron">
+        <h1 class="display-4">Menu</h1> -->
         <!-- A Tag main é responsável para dizer os navegadores onde está o conteúdo principal da aplicação. -->
-<main>
-</div>
+    <!-- <main>
+    </div> --> 
 
 <body background="imgs/13087.jpg">
     <div class="name">
