--- a/Semana 5/Atividade Pratica/arquivo2.html
+++ b/Semana 5/Atividade Pratica/arquivo2.html
@@ -42,7 +42,7 @@ Dev: Luiz Filipe - 2111287
 </script>
 
 <!-- Adicionando o menu navegável -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">E-Sport</a>
 <button class="navbar-toggler" type="button"
 data-toggle="collapse" data-target="#navbarNav"
@@ -72,13 +72,13 @@ aria-label="Toggle navigation">
 <div class="container">
 
 <div class="container">
-    <div class="jumbotron">
-        <h1 class="display-4">Menu</h1>
+    <!-- <div class="jumbotron">
+        <h1 class="display-4">Menu</h1> -->
         <!-- A Tag main é responsável para dizer os navegadores onde está o conteúdo principal da aplicação. -->
-<main>
-</div>
+    <!-- <main>
+    </div> --> 
 
-<body background="imgs/background.png"> <!-- definindo o background da página -->
+<body background="imgs/wallpapersden.com_tiny-tina-s-wonderlands-gaming-background_1920x1080.jpg"> <!-- definindo o background da página -->
     <div class="formulario">
         <form> <!--Criando o formulário-->
             <strong>
