--- a/Semana 5/Atividade Pratica/arquivo3.html
+++ b/Semana 5/Atividade Pratica/arquivo3.html
@@ -39,7 +39,7 @@ Dev: Luiz Filipe - 2111287
 </script>
 
 <!-- Adicionando o menu navegável -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">E-Sport</a>
 <button class="navbar-toggler" type="button"
 data-toggle="collapse" data-target="#navbarNav"
@@ -69,11 +69,11 @@ aria-label="Toggle navigation">
 <div class="container">
 
 <div class="container">
-    <div class="jumbotron">
-        <h1 class="display-4">Menu</h1>
+    <!-- <div class="jumbotron">
+        <h1 class="display-4">Menu</h1> -->
         <!-- A Tag main é responsável para dizer os navegadores onde está o conteúdo principal da aplicação. -->
-<main>
-</div>
+    <!-- <main>
+    </div> --> 
 
 <body background="imgs/13087.jpg"> <!-- Abertura da tag BODY que contém o conteúdo do documento -->
 
@@ -88,9 +88,9 @@ aria-label="Toggle navigation">
                     </thead>
                 <tbody> <!-- Corpo da tabela -->
                   <tr> 
-                    <th>Nome</th> <!-- Célula de cabeçalho da tabela com a palavra "Nome" -->
-                        <th>Idade</th> <!-- Célula de cabeçalho da tabela com a palavra "Idade" -->
-                        <th>Profissão</th> <!-- Célula de cabeçalho da tabela com a palavra "Profissão" -->
+                     <th>Nome</th> <!-- Célula de cabeçalho da tabela com a palavra "Nome" -->
+                     <th>Idade</th> <!-- Célula de cabeçalho da tabela com a palavra "Idade" -->
+                     <th>Profissão</th> <!-- Célula de cabeçalho da tabela com a palavra "Profissão" -->
                   </tr>
                   <tr> 
                     <td>Maria</td>
