--- a/Semana 5/Atividade Pratica/arquivo2.html
+++ b/Semana 5/Atividade Pratica/arquivo2.html
@@ -83,16 +83,16 @@ aria-label="Toggle navigation">
         <form> <!--Criando o formulário-->
             <strong>
                 <label for="nome">Nome:</label>
-                <input type="text" id="nome" name="nome"><br><br>
+                <input type="text" id="nome" name="nome" required><br><br>
 
                 <label for="email">E-mail:</label>
-                <input type="email" id="email" name="email"><br><br>
+                <input type="email" id="email" name="email" required><br><br>
 
                 <label for="senha">Senha:</label>
-                <input type="password" id="senha" name="senha"><br><br>
+                <input type="password" id="senha" name="senha" required><br><br>
 
                 <label for="idade">Idade:</label>
-                <input type="number" id="idade" name="idade"><br><br>
+                <input type="number" id="idade" name="idade" required><br><br>
 
                 <label for="sexo">Sexo:</label>
                 <input type="radio" id="sexo_feminino" name="sexo" value="feminino">
